<resources>
    <string name="app_name">VeriTendance</string>
    <string name="title_employees">Employees</string>
    <string name="title_history">History</string>
    <string name="title_session">Session</string>
    <string name="title_topics">Topics</string>
    <string name="title_start_session">Start Session</string>
    <string name="title_summary">Summary</string>
    <string name="title_new_employee">New Employee</string>
    <string name="modify_employee">Modify Employee</string>
    <string name="modify_session">Modify Session</string>
    <string name="modify_topic">Modify Topic</string>
    <string name="no_sessions_msg">No Sessions recorded yet! Go to the New Session page to start one.</string>
    <string name="no_employees_msg">No Employees recorded. Press the + button below to add some</string>
    <string name="no_employees_session_msg">You cannot start a session until there are employees to participate! Add some employees on the Employees tab!</string>
    <string name="no_employees_in_session_msg">You cannot finish a session that has no attendees.</string>
    <string name="start_new_jobactive_session">Start New jobactive Session</string>
    <string name="start_new_empty_session">Start New Empty Session</string>
    <string name="start_new_des_session">Start New DES Session</string>
    <string name="employee_name">(employee_name)</string>
    <string name="employee_jobtitle">(employee_jobTitle)</string>
    <string name="employee_email">(employee_email)</string>
    <string name="attendee_name">(attendee_name)</string>
    <string name="session_name">(session_name)</string>
    <string name="session_date">(session_date)</string>
    <string name="session_attendee_count">(session_attendee_count)</string>
    <string name="session_percentage_completed">(session_percentage_completed)</string>
    <string name="topic_name">(topic_name)</string>
    <string name="no_topics_recorded_save_a_session_as_a_topic_in_the_new_session_tab">No topics recorded! Save a session as a topic in the New Session tab!</string>
    <string name="contract">Contract</string>
    <string name="job_coach">Job Coach</string>
    <string name="john_doe_best_com_au">john.doe@best.com.au</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="job_title">Job Title</string>
    <string name="name">Name</string>
    <string name="start_time">Start Time</string>
    <string name="attendees">Attendees</string>
    <string name="end_time">End Time</string>
    <string name="title">Title</string>
    <string name="john_doe">John Doe</string>
    <string name="session_type_placeholder">Session Type Placeholder</string>
    <string name="description">Description</string>
    <string name="save_session_as_a_topic">Save session as a topic</string>
    <string name="start_time_here">Start Time Here</string>
    <string name="session_notes">Session Notes</string>
    <string name="end_time_here">End Time Here</string>
    <string name="finish">Finish</string>
</resources>
